# mlwp-data-loaders

./: DEVELOPING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mlwp_data_loaders/: __init__.py  api.py  cli.py  core.py  mxalign_api.py
src/mlwp_data_loaders/loaders/: __init__.py
src/mlwp_data_loaders/loaders/anemoi/: __init__.py  anemoi_datasets.py  anemoi_inference.py
src/mlwp_data_loaders/loaders/harp/: obstable.py
tests/: test_anemoi_datasets_integration.py  test_api.py  test_cli.py  test_harp_obstable_integration.py
