[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlwp-data-loaders"
version = "0.1.0"
description = "Loader package for opening datasets before mlwp-data-specs validation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "mlwp-data-specs",
  "xarray>=2024.1.0",
  "loguru>=0.7.0",
  "fsspec>=2024.2.0",
  "s3fs>=2024.2.0",
  "zarr>=3.1.5",
  "h5netcdf>=1.3.0",
]

[tool.isort]
profile = "black"

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
]

[project.scripts]
"mlwp.load_and_validate_dataset" = "mlwp_data_loaders.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
mlwp-data-specs = { path = "../mlwp-data-specs", editable = true }
