[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlwp-data-loaders"
version = "0.1.0"
description = "Loader package for opening datasets before mlwp-data-specs validation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "xarray",
  "loguru",
  "fsspec",
  "s3fs",
  "zarr>2,<3",
  "h5netcdf",
  "mlwp-data-specs",
]

[tool.isort]
profile = "black"

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "certifi>=2021.10.8",
]

[project.scripts]
"mlwp.load_and_validate_dataset" = "mlwp_data_loaders.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
mlwp-data-specs = { git = "https://github.com/mlwp-tools/mlwp-data-specs", rev = "3a7529b" }
mxalign = { git = "https://github.com/mlwp-tools/mxalign", rev = "e2232d93275c7508897a7ddb0cce8b508665f24c" }

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "ipython>=9.11.0",
    "pytest>=9.0.2",
]
test = [
    "mxalign",
]
